Rename server file. Update to use get-port for better port randomization. Export server properly from index file.

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-preset-es2017": "^6.22.0",
     "babel-preset-stage-0": "^6.22.0",
     "babel-runtime": "^6.23.0",
+    "get-port": "^3.1.0",
     "mongodb-prebuilt": "^6.2.0",
     "portfinder": "^1.0.13",
     "temp-path": "^1.0.0",
