--- a/package.json
+++ b/package.json
@@ -6,20 +6,22 @@
   "author": "Connor Imrie",
   "license": "MIT",
   "scripts": {
+    "build": "babel src -d build",
     "test": "NODE_ENV=testing ava --verbose --timeout=6000"
   },
-  "repository" :{
-    "type" : "git", 
-    "url" : "https://github.com/CImrie/mongomem.git"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/CImrie/mongomem.git"
   },
   "dependencies": {
-    "mongodb-prebuilt": "^6.2.0",
     "get-port": "^3.1.0",
+    "mongodb-prebuilt": "^6.2.0",
     "tmp": "0.0.31",
     "uuid": "^3.0.1"
   },
   "devDependencies": {
     "ava": "^0.19.0",
+    "babel-cli": "^6.26.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.24.0",
